# cortex

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
modules/: README.md
modules/_shared/: utils.py
modules/bible_plan/: README.md  __init__.py  chapter_plan.json  main.py
modules/bible_plan/lib/: __init__.py  biblehub.py  config.py  dates.py  links.py  llm.py  logging_bridge.py  plan.py  render.py
modules/career_watch/: README.md  __init__.py  main.py
modules/career_watch/lib/: __init__.py  config.py  db.py  engine.py  http_client.py  logging_bridge.py  models.py  render.py  utils.py  vpn_client.py
modules/career_watch/lib/scrapers/: __init__.py  _targets.py  avature.py  bae.py  base.py  boeing.py  icims.py  lever.py  registry.py  stub.py  workday_cxs.py
modules/example_daily/: main.py
modules/example_daily/lib/: transform.py
modules/sonos/: README.md  __init__.py  main.py
modules/sonos/lib/: __init__.py  chime.py  client.py  playback.py  utils.py
scripts/: README.md  career_check.py  first_run.sh  print_latest_postings.py  proton_query.py  pytest.sh  reload.sh
service/: cli.py  config_schema.py  emailer.py  imap_listener.py  logging_utils.py  mcp_server.py  runner.py  scheduler.py
service/imap_commands/: __init__.py  handlers.py  parser.py  templates.py
tests/: conftest.py  test_bible_plan.py  test_career_watch.py  test_career_watch_db.py  test_career_watch_targets.py  test_cli_run_multi_noemail.py  test_config_schema.py  test_example_daily.py  test_llm_unit.py  test_runner_integration.py  test_scheduler_triggers.py  test_sonos_presence.py
tests/assorted_live/: test_sonos_queue_roundtrip_soco.py
tests/career_live/: test_avature_live.py  test_bae_live.py  test_boeing_live.py  test_icims_live.py  test_lever_live.py  test_workday_cxs_live.py
tests/manual_live_runs/: test_bible_live.py  test_sonos_live.py
