# pyproject.toml

[project]
name = "cortex"
version = "0.1.0"
description = "One-container scheduler to ProtonMail to IMAP commands"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "apscheduler==3.10.4",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "html5lib==1.1",
    "urllib3>=1.26.18,<3",
    "google-api-python-client==2.149.0",
    "google-auth==2.34.0",
    "google-auth-oauthlib==1.2.1",
    "ics==0.7.2",
    "openai>=1.40.0",
    "soco",
    "IMAPClient==2.3.1",
    "mail-parser==3.15.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "freezegun",
    "pytest-timeout>=2.3.1",
    "pytest-env",
    "ruff",
    "mypy",
]

# --- HATCH BUILD CONFIG ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cortex = "service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["modules", "service", "scripts"]

# --- Ruff ---
[tool.ruff]
line-length = 115
target-version = "py312"
exclude = [".venv","venv","build","dist","local","node_modules"]

[tool.ruff.lint]
select = ["F","E","W","I","UP","B","SIM","PERF","RUF","C4","PTH","DTZ","S","ARG","N"]
ignore = ["F401","S101","S110","S108"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"scripts/**" = ["PTH","DTZ","S","ARG","N","C4","B007"]
"modules/**" = ["PTH","DTZ","S","ARG","N","C4"]
"tests/**" = ["ARG","N801","N818","DTZ"]

[tool.ruff.format]
preview = true
indent-style = "space"
quote-style = "double"
line-ending = "lf"

# --- MyPy ---
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
warn_return_any = true
exclude = [".venv","venv","build","dist","local","node_modules"]

# --- Pytest ---
[tool.pytest.ini_options]
cache_dir = "local/.pytest_cache"

# TODO(round-2): fix type errors in modules and service
[[tool.mypy.overrides]]
module = ["modules.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["service.runner", "service.logging_utils", "service.imap_commands.*", "service.scheduler", "service.cli", "scripts.*"]
ignore_errors = true